# synon-daemon

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  build_remote.sh  progress.md  task_plan.md
.cargo/: config.toml
docs/: README.md  cli.md
docs/archive_designs/: concurrent-executor.md
docs/designs/: daemon-audit.md  phase2-server-client-routing.md
docs/superpowers/plans/: 2026-04-14-ssh-proxy-sprint1.md
python_agent/: requirements.txt  server.py
scripts/: gen_ssh_keys.sh
src/: ai_bridge.rs  claw_manager.rs  claw_proxy.rs  config.rs  console_ws.rs  exec_handler.rs  gnb_controller.rs  gnb_monitor.rs  heartbeat.rs  main.rs  mqtt_agent.rs  self_updater.rs  skills_manager.rs  ssh_server.rs  task_dedup.rs  task_executor.rs  util.rs  watchdog.rs
src/console/: auth.rs  db.rs  heartbeat.rs  mod.rs  mqtt_broker.rs  session.rs  ssh_db.rs  ssh_proxy.rs  task_queue.rs
