[package]
name = "synon-daemon"
version = "0.1.0"
edition = "2021"
description = "SynonClaw 节点控制面守护进程 — 取代 node-agent.sh + SSH 自动化"

[[bin]]
name = "synon-daemon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
socket2 = { version = "0.5", features = ["all"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
url = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.29", features = ["process", "signal"] }
anyhow = "1"
tokio-retry = "0.3"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
libc = "0.2"
tokio-util = "0.7"
sd-notify = "0.4"

# --- MQTT 通信层 ---
rumqttc = "0.24"                                                          # Agent MQTT 客户端

# --- Console Backend Dependencies ---
axum = { version = "0.7", features = ["ws"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["set-header", "cors", "trace"], optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
deadpool-sqlite = { version = "0.8", optional = true }
rumqttd = { version = "0.19", optional = true }                            # Console 嵌入式 MQTT Broker

# --- SSH Proxy Dependencies ---
russh = { version = "0.60", default-features = false, features = ["aws-lc-rs"], optional = true }
async-trait = { version = "0.1", optional = true }
portable-pty = { version = "0.9.0", optional = true }

[features]
console = ["dep:axum", "dep:tower", "dep:tower-http", "dep:rusqlite", "dep:deadpool-sqlite", "dep:rumqttd"]
ssh-proxy = ["dep:russh", "dep:async-trait", "dep:portable-pty", "console"]  # SSH Proxy 依赖 console feature
default = []

[profile.release]
opt-level = "z"       # 最小二进制体积
lto = true
strip = true
panic = "abort"
